# RAISK

./: CODE_OF_CONDUCT.md  README.md  RELEASE_NOTES.md
.specstory/history/: 2025-10-02_13-14Z-granting-full-permissions-to-claude-code.md  2025-10-10_13-44Z-commit-and-push-to-github-repository.md  2025-10-23_16-46Z-commit-and-push-code-from-jlov7.md
deliverables/01-gai-rmf-kit/scripts/: generate_crosswalk.py  validate_checklists.py
responsible-genai-starter-kit/: AGENTS.md  CHANGELOG.md  CITATION.cff  CODEOWNERS  CONTRIBUTING.md  DO-THIS-NEXT.md  FINAL-STATUS.md  IMPROVEMENTS.md  LICENSE  README.md  SECURITY.md
responsible-genai-starter-kit/.github/: branch-protection.md
responsible-genai-starter-kit/.github/workflows/: eval-gate.yml
responsible-genai-starter-kit/deliverables/01-gai-rmf-kit/: README.md  crosswalk.csv
responsible-genai-starter-kit/deliverables/02-eval-harness/: .gitignore  IMPLEMENTATION_NOTES.md  README.md  pyproject.toml  requirements.txt
responsible-genai-starter-kit/deliverables/02-eval-harness/eval_harness/: __init__.py  cli.py  core.py  dataset.py  llm_judge.py  scorers.py  types.py
responsible-genai-starter-kit/deliverables/02-eval-harness/examples/: ci_example.sh  example_usage.py  pii_test_dataset.csv  qa_dataset.csv  safety_dataset.jsonl
responsible-genai-starter-kit/deliverables/02-eval-harness/tests/: test_core.py  test_dataset.py  test_golden_run.py  test_scorers.py
responsible-genai-starter-kit/deliverables/03-ssdf-genai-ci/: .syft.yaml  DELIVERABLE_SUMMARY.txt  README.md  SETUP.md  (+2 more)
responsible-genai-starter-kit/docs/: GETTING-STARTED.md  RELEASE-CHECKLIST.md  SYSTEM-OVERVIEW.md  refs.md  threat-model.md
(+41 files in other folders)
